изменил структуру проекта

--- a/index.html
+++ b/index.html
@@ -2,185 +2,14 @@
 <html>
   <head>
     <link rel="icon" href="/src/favicon.ico" type="image/x-icon">
-
-    <!-- Стили остаются без изменений -->
-    <style>
-      /* Общий стиль */
-      * {
-        box-sizing: border-box;
-      }
-
-      body {
-        margin: 0; /* Убираем отступы по умолчанию */
-        font-family: Arial, sans-serif; /* Шрифт для всего документа */
-        font-size: 14px; /* Размер шрифта */
-        line-height: 20px; /* Высота строки */
-        color: #333; /* Цвет текста */
-        min-height: 100vh; /* Минимальная высота на весь экран */
-        background: linear-gradient(
-          135deg,
-          #110c29,
-          #1a1538  
-        ); /* Сохранение левого цвета и немного затемненный правый цвет */
-      }
-
-      .logo {
-        height: 309px;
-        width: 359px;
-        margin: 20px;
-      }
-      .logo_text {
-        color: transparent;
-        -webkit-background-clip: text;
-        background-clip: text;
-        background-image: linear-gradient(
-          135deg,
-          rgb(216, 37, 223),
-          rgb(88, 9, 216)
-        );
-      }
-      .h_text {
-        font-family: Inter, sans-serif;
-        color: #fff;
-      }
-      .p_text {
-        font-family: Inter, sans-serif;
-        color: #fff;
-        font-size: 14pt;
-      }
-      .vvv {
-        padding: 2rem 0;
-      }
-
-      /* Стилизация поисковой строки */
-      .search-container {
-        position: relative;
-        margin: 0 auto;
-      }
-
-      .search-input {
-        padding: 1.25rem 4rem !important;
-        border-radius: 50px !important;
-        border: 2px solid #6a11cb;
-        background: rgba(255, 255, 255, 0.1) !important;
-        color: #fff !important;
-        font-size: 1.1rem;
-        transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-      }
-
-      .search-input:focus {
-        box-shadow: 0 0 20px rgba(106, 17, 203, 0.4);
-        border-color: #7c4dff;
-        background: rgba(255, 255, 255, 0.15) !important;
-      }
-
-      /* Стили кнопок */
-      .paste-button {
-        background: rgba(255, 255, 255, 0.1);
-        border: none;
-        transition: all 0.3s ease;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: absolute;
-        left: 10px;
-        top: 50%;
-        transform: translateY(-50%);
-        z-index: 3;
-        height: 45px;
-        width: 45px;
-        border-radius: 50%;
-      }
-      .circle {
-        position: absolute;
-        height: 50px;
-        width: 100px;
-      }
-      .paste-button:hover {
-        background: #6a11cb;
-        transform: translateY(-50%) scale(1.1);
-      }
-
-      .paste-button svg {
-        fill: #fff;
-        opacity: 0.8;
-      }
-      .h_text,
-      .logo_text {
-        display: inline;
-        margin: 0;
-      }
-      .search-button {
-        background: #7c4dff;
-        border: none;
-        transition: all 0.3s ease;
-        position: absolute;
-        z-index: 3;
-        top: 50%;
-        transform: translateY(-50%);
-        right: 20px;
-        border-radius: 50%;
-        width: 45px;
-        height: 45px;
-      }
-
-      .search-button:hover {
-        background: #6a11cb;
-        transform: translateY(-50%) scale(1.1);
-      }
-
-      /* Эффекты placeholder */
-      .search-input::placeholder {
-        color: rgba(255, 255, 255, 0.6) !important;
-        letter-spacing: 0.5px;
-      }
-
-      .radiant-purple {
-        font-size: 18pt;
-        font-weight: bold;
-        background: linear-gradient(
-          135deg,
-          #8a2be2 0%,
-          #9932cc 20%,
-          #da70d6 40%,
-          #ee82ee 60%,
-          #ff69b4 80%,
-          #ff1493 100%
-        );
-        background-size: 200% 200%;
-        -webkit-background-clip: text;
-        background-clip: text;
-        color: transparent;
-        animation: gradientShift 6s ease infinite;
-        display: inline-block;
-      }
-
-      @keyframes gradientShift {
-        0% {
-          background-position: 0% 50%;
-        }
-        50% {
-          background-position: 100% 50%;
-        }
-        100% {
-          background-position: 0% 50%;
-        }
-      }
-
-      .paragraph_container {
-        margin-left: 50px !important;
-      }
-      .hidden {
-            display: none;
-        }
-    </style>
     <title>Crypto scan</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+      <link rel="stylesheet" href="style/main.css">
   </head>
-  <body>
+  <body class="body">
     <header>
       <nav class="navbar">
         <div class="container-fluid">
@@ -353,84 +182,7 @@
         <div class="mx-auto col-3 cards-container"></div>
       </div>
     </main>
+            <script src="/js/index.js"></script>
+
   </body>
-  <script>
-  if (!localStorage.getItem("lang") || localStorage.getItem("lang") === "null" || localStorage.getItem("lang") === "undefined") {
-    localStorage.setItem("lang", "eng");
-}
-
-// Получаем элементы DOM
-let engbtn = document.getElementById("eng_btn");
-let rusbtn = document.getElementById("rus_btn");
-let econtent = document.getElementById("en-content");
-let rcontent = document.getElementById("ru_content");
-let finder = document.getElementById("contractInput");
-let engplc = "ca search";
-let rusplc = "поиск по контракту";
-
-function chg_lng() {
-    if (localStorage.getItem("lang") == "eng") {
-        rcontent.setAttribute("class", "hidden");
-        econtent.removeAttribute("class");
-        engbtn.removeAttribute("class");
-        engbtn.setAttribute("class", "btn btn-success");
-        rusbtn.removeAttribute("class");
-        rusbtn.setAttribute("class", "btn btn-outline-success");
-        finder.placeholder = engplc;
-    }
-    if (localStorage.getItem("lang") == "rus") {
-        econtent.setAttribute("class", "hidden");
-        rcontent.removeAttribute("class");
-        rusbtn.removeAttribute("class");
-        rusbtn.setAttribute("class", "btn btn-success");
-        engbtn.removeAttribute("class");
-        engbtn.setAttribute("class", "btn btn-outline-success");
-        finder.placeholder = rusplc;
-    }
-}
-
-function initLanguage() {
-    chg_lng();
-}
-
-// Обработчики кнопок смены языка
-engbtn.addEventListener("click", function() {
-    localStorage.setItem("lang", "eng");
-    chg_lng();
-});
-
-rusbtn.addEventListener("click", function() {
-    localStorage.setItem("lang", "rus");
-    chg_lng();
-});
-
-// Инициализация при загрузке страницы
-document.addEventListener("DOMContentLoaded", function() {
-    localStorage.removeItem("contract"); // Очищаем предыдущий контракт
-    initLanguage();
-});
-
-// Функция вставки из буфера
-document.getElementById("pasteButton").addEventListener("click", async () => {
-    try {
-        const text = await navigator.clipboard.readText();
-        const input = document.getElementById("contractInput");
-        input.value = text;
-        input.focus();
-        input.select();
-    } catch (err) {
-        console.error("Ошибка доступа к буферу:", err);
-        alert("Разрешите доступ к буферу или введите адрес вручную");
-    }
-});
-
-document.getElementById("search").addEventListener("click", () => {
-    const contractAddress = document.getElementById("contractInput").value;
-    if (contractAddress) {
-        console.log("Ищем контракт:", contractAddress);
-        localStorage.setItem("contract", contractAddress);
-        window.location.href = "./token.html";
-    }
-});
-  </script>
 </html>
