изменено:      html/holders_table.html

--- a/html/holders_table.html
+++ b/html/holders_table.html
@@ -124,6 +124,6 @@
             </div>
         </div>
     </main>
-  <script src="/js/holders.js"></script>
+  <script src="../js/holders.js"></script>
 </body>
 </html> 
