--- a/html/lock_table.html
+++ b/html/lock_table.html
@@ -119,6 +119,6 @@
             </div>
         </div>
     </main>
-  <script src="/js/locks.js"></script>
+  <script src="../js/locks.js"></script>
 </body>
 </html> 
