--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <div class="mx-auto col-3 cards-container"></div>
       </div>
     </main>
-            <script src="/js/index.js"></script>
+            <script src="js/index.js"></script>
 
   </body>
 </html>
