--- a/html/token.html
+++ b/html/token.html
@@ -126,8 +126,15 @@
                     </svg>
                   </button>
                 </div>
+                <div class="col-auto">
+                <div><button id="socials" class = "socials"><div class="zatmen"><img src="../src/soc.gif" width="16" height="16" class="d-inline-block align-text-top"></div><div class="sprav_zatmet"><span id="soc_txt"></span><svg xmlns="http://www.w3.org/2000/svg"width = 16px height = 16px viewBox="0 0 320 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z"/></svg></span></div></button>
+                </div><div id="socials_drop" class = "socials_drop" style="display:none;">
+                  <div>sos</div>
+                  <div>sos</div>
+                </div>
               </div>
               <div id="description" class="token_info_text"></div>
+              </div>
             </div>
             <div class="col col-lg-6 col-md-12 col-sm-12 col-12 token_chart_info">
               <div style="
