Какой то базовый отчет в локах добавлен

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <link rel="icon" href="/src/favicon.ico" type="image/x-icon">
     <title>Crypto scan</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
