подумать про редизайн

--- a/html/holders_table.html
+++ b/html/holders_table.html
@@ -101,7 +101,8 @@
         <div class="row">
             
             <div class="col-11 mx-auto container">
-                <div class="content border border-white border- rounded">
+                  <div class="card">
+                <div class="card-header">
                     <div class="d-flex">
                     <button id="btn-1" class=" hoder_btn "></button>
                     <button id="btn-2" class=" hoder_btn "></button>
@@ -110,7 +111,7 @@
                 </div>
                 <table class="table table-bordered border-info">
                     <thead>
-                        <tr>
+                        <tr style="opacity: 1; transform: translateY(0px); transition: opacity 0.5s, transform 0.5s;">
                             <th width="5%">#</th>
                             <th width="25%" id="koshel"></th>
                             <th width="10%" id="suplay"></th>
