--- a/html/lock_table.html
+++ b/html/lock_table.html
@@ -97,13 +97,15 @@
         <div class="row">
             
             <div class="col-11 mx-auto container">
-                <div class="content border border-white border- rounded">
+              <div class="card">
+                <div class="card-header">
+                <div class="content">
                     <div class="d-flex">
                     <span id="all_holder" class="ms-auto"></span>
                 </div>
-                <table class="table table-bordered border-info">
+                <table class="table table-bordered">
                     <thead>
-                        <tr>
+                        <tr style="opacity: 1; transform: translateY(0px); transition: opacity 0.5s, transform 0.5s;">
                             <th width="" id="koshel"></th>
                             <th width="" id="suplay"></th>
                             <th width="" id="start_lock"></th>
@@ -113,6 +115,8 @@
                     </thead>
                     <tbody id="tableinsert"></tbody>
                 </table>
+                </div>
+                </div>
             </div>
         </div>
             </div>
