--- a/html/token.html
+++ b/html/token.html
@@ -297,7 +297,7 @@
           </div>
           
           <div class="row mx-auto">
-            <div class="col bg-danger bg-opacity-50 alert_block">
+            <div class="col bg-danger alert_block">
               <img
                 src="../src/red_flag_png.gif"
                 width="30"
@@ -305,7 +305,7 @@
                 class="d-inline-block align-text-top"
               /><span id="left"></span>
             </div>
-            <div class="col bg-danger bg-opacity-50 alert_block">
+            <div class="col bg-danger alert_block">
               <img
                 src="../src/red_flag_png.gif"
                 width="30"
@@ -319,6 +319,7 @@
         <!-- закрытие col-11 mx-auto info_block -->
       </div>
       <!-- закрытие основного row -->
+       
     </main>
         <script src="https://unpkg.com/lightweight-charts@3.8.0/dist/lightweight-charts.standalone.production.js"></script>
     <script src="../js/tokens.js"></script>
