--- a/html/holders_table.html
+++ b/html/holders_table.html
@@ -15,8 +15,14 @@
       </div>
       <div class="row">
         <div class = "col-6">
-      <p id="wallet"></p>
-      <p id="supl"></p>
+      <p class="pop_up_info_p">wallet_type: <span id="wall_type" class="pop_up_info_span"></span>
+      <p class="pop_up_info_p">Адресс кошелька: <span id="wallet" class="pop_up_info_span"></span></p>
+      <p class="pop_up_info_p">Доля:<span id ="supl" class="pop_up_info_span"></span></p>
+      <p class="pop_up_info_p"> Телеграм юзернеймы:<span id ="usernames" class="pop_up_info_span"></span></p>
+      <p class="pop_up_info_p"> Анонимные номера:<span id ="anons" class="pop_up_info_span"></span></p>
+      <p class="pop_up_info_p"> Баланс Тон:<span id ="balance" class="pop_up_info_span"></span></p>
+      <p class="pop_up_info_p"> PnL:<span id ="pnl" class="pop_up_info_span"></span></p>
+      <p class="pop_up_info_p"> Статус:<span id ="status" class="pop_up_info_span"></span></p>
       </div>
 <div class="col-6">
   <p class="wallet_title">Таблица последних операций с монетой</p>
@@ -30,50 +36,8 @@
             <th>jetton</th>
           </tr>
           </thead>
-          <tbody class="sss">
-            <tr class="trs">
-            <th>#</th>
-            <th>Тип</th>
-            <th>ton</th>
-            <th>jetton</th>
-          </tr>
-          <tr class="trs">
-            <th>#</th>
-            <th>Тип</th>
-            <th>ton</th>
-            <th>jetton</th>
-          </tr>
-          <tr class="trs">
-            <th>#</th>
-            <th>Тип</th>
-            <th>ton</th>
-            <th>jetton</th>
-          </tr>
-          <tr class="trs">
-            <th>#</th>
-            <th>Тип</th>
-            <th>ton</th>
-            <th>jetton</th>
-          </tr>
-          <tr class="trs">
-            <th>#</th>
-            <th>Тип</th>
-            <th>ton</th>
-            <th>jetton</th>
-          </tr>
-          <tr class="trs">
-            <th>#</th>
-            <th>Тип</th>
-            <th>ton</th>
-            <th>jetton</th>
-          </tr>
-          <tr class="trs">
-            <th>#</th>
-            <th>Тип</th>
-            <th>ton</th>
-            <th>jetton</th>
-          </tr>
-          
+          <tbody class="sss" id="PopTable">
+    
           </tbody>
         </table>
       </div>
