--- a/html/holders_table.html
+++ b/html/holders_table.html
@@ -36,9 +36,8 @@
             <th>jetton</th>
           </tr>
           </thead>
-          <tbody class="sss" id="PopTable">
-    
-          </tbody>
+          <tbody id="sss"></tbody>
+
         </table>
       </div>
         </div>
