--- a/html/holders_table.html
+++ b/html/holders_table.html
@@ -8,41 +8,42 @@
 </head>
 <body>
 
-  <div class="wallet_card" id="wallet_card" style="display:none;">
-    <div class="wallet-card-header">
-      <div class="wallet_title"><span >Кошелек <span id="index"></span></div>
-      <div class="right" id="cls_pop"><svg class = "close_svg"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M320 112C434.9 112 528 205.1 528 320C528 434.9 434.9 528 320 528C205.1 528 112 434.9 112 320C112 205.1 205.1 112 320 112zM320 576C461.4 576 576 461.4 576 320C576 178.6 461.4 64 320 64C178.6 64 64 178.6 64 320C64 461.4 178.6 576 320 576zM231 231C221.6 240.4 221.6 255.6 231 264.9L286 319.9L231 374.9C221.6 384.3 221.6 399.5 231 408.8C240.4 418.1 255.6 418.2 264.9 408.8L319.9 353.8L374.9 408.8C384.3 418.2 399.5 418.2 408.8 408.8C418.1 399.4 418.2 384.2 408.8 374.9L353.8 319.9L408.8 264.9C418.2 255.5 418.2 240.3 408.8 231C399.4 221.7 384.2 221.6 374.9 231L319.9 286L264.9 231C255.5 221.6 240.3 221.6 231 231z"/></svg></div>
-      </div>
-      <div class="row">
-        <div class = "col-6">
-      <p class="pop_up_info_p">wallet_type: <span id="wall_type" class="pop_up_info_span"></span>
+<div class="wallet_card" id="wallet_card" style="display:none;">
+  <div class="wallet-card-header">
+    <div class="wallet_title"><span>Кошелек <span id="index"></span></span></div>
+    <div class="right" id="cls_pop">
+      <svg class="close_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640">
+        <path d="M320 112C434.9 112 528 205.1 528 320C528 434.9 434.9 528 320 528C205.1 528 112 434.9 112 320C112 205.1 205.1 112 320 112zM320 576C461.4 576 576 461.4 576 320C576 178.6 461.4 64 320 64C178.6 64 64 178.6 64 320C64 461.4 178.6 576 320 576zM231 231C221.6 240.4 221.6 255.6 231 264.9L286 319.9L231 374.9C221.6 384.3 221.6 399.5 231 408.8C240.4 418.1 255.6 418.2 264.9 408.8L319.9 353.8L374.9 408.8C384.3 418.2 399.5 418.2 408.8 408.8C418.1 399.4 418.2 384.2 408.8 374.9L353.8 319.9L408.8 264.9C418.2 255.5 418.2 240.3 408.8 231C399.4 221.7 384.2 221.6 374.9 231L319.9 286L264.9 231C255.5 221.6 240.3 221.6 231 231z"/>
+      </svg>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-6">
+      <p class="pop_up_info_p">wallet_type: <span id="wall_type" class="pop_up_info_span"></span></p>
       <p class="pop_up_info_p">Адресс кошелька: <span id="wallet" class="pop_up_info_span"></span></p>
-      <p class="pop_up_info_p">Доля:<span id ="supl" class="pop_up_info_span"></span></p>
-      <p class="pop_up_info_p"> Телеграм юзернеймы:<span id ="usernames" class="pop_up_info_span"></span></p>
-      <p class="pop_up_info_p"> Анонимные номера:<span id ="anons" class="pop_up_info_span"></span></p>
-      <p class="pop_up_info_p"> Баланс Тон:<span id ="balance" class="pop_up_info_span"></span></p>
-      <p class="pop_up_info_p"> PnL:<span id ="pnl" class="pop_up_info_span"></span></p>
-      <p class="pop_up_info_p"> Статус:<span id ="status" class="pop_up_info_span"></span></p>
-      </div>
-<div class="col-6">
-  <p class="wallet_title">Таблица последних операций с монетой</p>
-  
-    <table >
-          <thead>
+      <p class="pop_up_info_p">Доля: <span id="supl" class="pop_up_info_span"></span></p>
+      <p class="pop_up_info_p">Телеграм юзернеймы: <span id="usernames" class="pop_up_info_span"></span></p>
+      <p class="pop_up_info_p">Анонимные номера: <span id="anons" class="pop_up_info_span"></span></p>
+      <p class="pop_up_info_p">Баланс Тон: <span id="balance" class="pop_up_info_span"></span></p>
+      <p class="pop_up_info_p">PnL: <span id="pnl" class="pop_up_info_span"></span></p>
+      <p class="pop_up_info_p">Статус: <span id="status" class="pop_up_info_span"></span></p>
+    </div>
+    <div class="col-6">
+      <p class="wallet_title">Таблица последних операций с монетой</p>
+      <table>
+        <thead>
           <tr>
             <th>#</th>
             <th>Тип</th>
             <th>ton</th>
             <th>jetton</th>
           </tr>
-          </thead>
-          <tbody id="sss"></tbody>
-
-        </table>
-      </div>
-        </div>
-
-      </div>
+        </thead>
+        <tbody id="sss"></tbody>
+      </table>
+    </div>
+  </div>
+</div>
     <header>
         <nav class="navbar ">
           <div class="container-fluid">
