--- a/html/holders_table.html
+++ b/html/holders_table.html
@@ -30,6 +30,7 @@
     </div>
     <div class="col-6">
       <p class="wallet_title">Таблица последних операций с монетой</p>
+      <div class="table-container">
       <table>
         <thead>
           <tr>
@@ -41,6 +42,11 @@
         </thead>
         <tbody id="sss"></tbody>
       </table>
+      <div class="preloader" id="table-preloader">
+      <div class="preloader-spinner"></div>
+      <div class="preloader-text">Загрузка данных...</div>
+    </div>
+    </div>
     </div>
   </div>
 </div>
